Avancement sur la gestion profil #10

--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -42,7 +42,7 @@
                 <td>{{ user.nom }}</td>
                 <td>{{ user.prenom }}</td>
                 <td>{{ user.rue }}</td>
-                <td>{{ user.code_postal }}</td>
+                <td>{{ user.codePostal }}</td>
                 <td>{{ user.ville }}</td>
                 <td>{{ user.domaineEtude }}</td>
                 <td>{{ user.estValide ? 'Yes' : 'No' }}</td>
