--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -60,6 +60,9 @@
 
 
     <tr align="center"><th><a href="{{ path('app_amphitheatre_index') }}"><button class="btn btn-outline-primary" role="button">Gestion Amphitheatre</button></a></th></tr>
+    {% if app.user.roles[0]=="ROLE_ADMIN" %}
+    <tr align="center"><th><a href="{{ path('app_user_index') }}"><button class="btn btn-outline-primary" role="button">Gestion Utilisateur</button></a></th></tr>
+    {% endif %}
     <tr align="center"><th><a href="{{ path('app_conference_index') }}"><button class="btn btn-outline-secondary" role="button">Gestion Conférence</button></a></th> </tr>
     <tr align="center"><th><a href="{{ path('app_offre_emploi_index') }}"><button class="btn btn-outline-success" role="button">Gestion Offre d'emplois</button></a></th> </tr>
     <tr align="center"><th><a href="{{ path('app_rendez_vous_index') }}"><button class="btn btn-outline-info" role="button">Gestion Rendez-vous</button></a></th> </tr>
@@ -71,7 +74,6 @@
     <tr align="center"><th><a href="{{ path('app_offre_emploi_etudiant') }}"><button class="btn-outline-primary" role="button">Voir offres d'emplois</button></a></th></tr>
     <tr align="center"><th><a href="{{ path('app_rendez_vous_confirmation') }}"><button class="btn-outline-primary" role="button">Organiser un rendez-vous</button></a></th></tr>
     <tr align="center"><th><a href="{{ path('app_rendez_vous_accepter_index')}}"><button class="btn-outline-primary" role="button">Valider ses rendez-vous</button></a></th></tr>
-    <tr align="center"><th><a href="{{ path('app_user_index')}}"><button class="btn-outline-primary" role="button">Gestion Utilisateur</button></a></th></tr>
     </tr>
 </table>
 
