--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -46,6 +46,7 @@
     }
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+
 </style>
 
 <div class="example-wrapper">
@@ -59,22 +60,24 @@
 <table align="center">
 
 
-    <tr align="center"><th><a href="{{ path('app_amphitheatre_index') }}"><button class="btn btn-outline-primary" role="button">Gestion Amphitheatre</button></a></th></tr>
+
     {% if app.user.roles[0]=="ROLE_ADMIN" %}
     <tr align="center"><th><a href="{{ path('app_user_index') }}"><button class="btn btn-outline-primary" role="button">Gestion Utilisateur</button></a></th></tr>
+    <tr align="center"><th><a href="{{ path('app_conference_index') }}"><button class="btn btn-outline-secondary" role="button">ADMIN Gestion Conférence</button></a></th> </tr>
+    <tr align="center"><th><a href="{{ path('app_offre_emploi_index') }}"><button class="btn btn-outline-success" role="button">ADMIN Gestion Offre d'emplois</button></a></th> </tr>
+    <tr align="center"><th><a href="{{ path('app_rendez_vous_index') }}"><button class="btn btn-outline-info" role="button">ADMIN Gestion Rendez-vous</button></a></th> </tr>
+    <tr align="center"><th><a href="{{ path('app_postuler_index') }}"><button class="btn btn-outline-warning" role="button">ADMIN Gestion Postulations</button></a></th> </tr>
+    <tr align="center"><th><a href="{{ path('app_validation_index') }}"><button class="btn btn-outline-primary" role="button">ADMIN Valider comptes</button></a></th></tr><tr align="center"><th><a href="{{ path('app_amphitheatre_index') }}"><button class="btn btn-outline-primary" role="button">ADMIN Gestion Amphitheatre</button></a></th></tr>
     {% endif %}
-    <tr align="center"><th><a href="{{ path('app_conference_index') }}"><button class="btn btn-outline-secondary" role="button">Gestion Conférence</button></a></th> </tr>
-    <tr align="center"><th><a href="{{ path('app_offre_emploi_index') }}"><button class="btn btn-outline-success" role="button">Gestion Offre d'emplois</button></a></th> </tr>
-    <tr align="center"><th><a href="{{ path('app_rendez_vous_index') }}"><button class="btn btn-outline-info" role="button">Gestion Rendez-vous</button></a></th> </tr>
-    <tr align="center"><th><a href="{{ path('app_postuler_index') }}"><button class="btn btn-outline-warning" role="button">Gestion Postulations</button></a></th> </tr>
-    <tr align="center"><th><a href="{{ path('app_validation_index') }}"><button class="btn btn-outline-danger" role="button">Gestion Validation</button></a></th> </tr>
-    <tr align="center"><th><a href="{{ path('app_creation_index') }}"><button class="btn btn-outline-light" role="button">Gestion Création</button></a></th> </tr>
-    <tr align="center"><th><a href="{{ path('app_validation_index') }}"><button class="btn btn-outline-primary" role="button">Valider comptes</button></a></th></tr>
-    <tr align="center"><th><a href="{{ path('app_validation_index') }}"><button class="btn btn-outline-primary" role="button">Postuler Etudiant</button></a></th></tr>
+    {% if app.user.roles[0]=="ROLE_HOPITAL" or app.user.roles[0]=="ROLE_ADMIN" %}
+
+    <tr align="center"><th><a href="{{ path('app_rendez_vous_confirmation') }}"><button class="btn-outline-primary" role="button">Organiser un rendez-vous</button></a></th></tr>
+    {% endif %}
     <tr align="center"><th><a href="{{ path('app_conference_index_etudiant')}}"><button class="btn-outline-primary" role="button">Voir les conferences</button></a></th></tr>
     <tr align="center"><th><a href="{{ path('app_offre_emploi_etudiant') }}"><button class="btn-outline-primary" role="button">Voir offres d'emplois</button></a></th></tr>
-    <tr align="center"><th><a href="{{ path('app_rendez_vous_confirmation') }}"><button class="btn-outline-primary" role="button">Organiser un rendez-vous</button></a></th></tr>
+    {% if app.user.roles[0]=="ROLE_ETUDIANT" %}
     <tr align="center"><th><a href="{{ path('app_rendez_vous_accepter_index')}}"><button class="btn-outline-primary" role="button">Valider ses rendez-vous</button></a></th></tr>
+    {% endif %}
     </tr>
 </table>
 
