--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -61,6 +61,8 @@
 
 
 
+
+    <div class="container">
     {% if app.user.roles[0]=="ROLE_ADMIN" %}
     <tr align="center"><th><a href="{{ path('app_user_index') }}"><button class="btn btn-outline-primary" role="button">Gestion Utilisateur</button></a></th></tr>
     <tr align="center"><th><a href="{{ path('app_conference_index') }}"><button class="btn btn-outline-secondary" role="button">ADMIN Gestion Conférence</button></a></th> </tr>
@@ -79,6 +81,8 @@
     <tr align="center"><th><a href="{{ path('app_rendez_vous_accepter_index')}}"><button class="btn-outline-primary" role="button">Valider ses rendez-vous</button></a></th></tr>
     {% endif %}
     </tr>
+
+    </div>
 </table>
 
     </ul>
