--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -38,8 +38,8 @@
     </div>
 
     <div class="form-group">
-        {{ form_label(registrationForm.code_postal, null, {'label_attr': {'class': 'form-label mt-4 code_postal-label'}}) }}
-        {{ form_widget(registrationForm.code_postal, {'attr': {'class': 'form-control code_postal', 'placeholder': 'Entrez votre CP'}}) }}
+        {{ form_label(registrationForm.code_postal, null, {'label_attr': {'class': 'form-label mt-4 cp-label'}}) }}
+        {{ form_widget(registrationForm.code_postal, {'attr': {'class': 'form-control cp', 'placeholder': 'Entrez votre CP'}}) }}
     </div>
     <div class="form-group">
         {{ form_label(registrationForm.ville, null, {'label_attr': {'class': 'form-label mt-4 ville-label'}}) }}
@@ -66,27 +66,17 @@
     </div>
     {{ form_row(registrationForm.agreeTerms) }}
 
-
-
-
     <button type="submit" class="btn btn-secondary mt-3">S'inscrire</button>
-
     {{ form_end(registrationForm) }}
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script>
         $(document).ready(function () {
-            $('#inscriptionButton').click(function () {
-                $('form').submit();
-            });
-
             updateDomaineEtudeVisibility();
 
             // Écouter les changements dans la sélection du rôle
             $('input.role-checkbox').change(function () {
                 updateDomaineEtudeVisibility();
             });
-
-            // ... (rest of your JavaScript code)
 
             function updateDomaineEtudeVisibility() {
                 // Vérifier si le rôle 'etudiant' est sélectionné
@@ -99,15 +89,12 @@
                     $('.domaine, .domaine-label').show();
                 }
             }
-
             updateRoleVisibility();
 
             // Écouter les changements dans la sélection du rôle
             $('input.role-checkbox').change(function () {
                 updateRoleVisibility();
             });
-
-            // ... (rest of your JavaScript code)
 
             function updateRoleVisibility() {
                 // Vérifier si le rôle 'etudiant' est sélectionné
@@ -116,20 +103,10 @@
                 // Masquer ou afficher le champ prenom en conséquence
                 if (etudiantSelected) {
                     $('.role, .role-label').hide();
-                    $('.rue, .rue-label').hide();
-                    $('.code_postal, .code_postal-label').hide();
-                    $('.ville, .ville-label').hide();
                 } else {
                     $('.role, .role-label').show();
-                    $('.rue, .rue-label').show();
-                    $('.code_postal, .code_postal-label').show();
-                    $('.ville, .ville-label').show();
                 }
             }
         });
-
-
-
-
     </script>
 {% endblock %}
